force-app/main/default/objects/Sensor__c/fields/Max_Vectors_Difference__c.field-meta.xml
<CustomField>
    <fullName>Max_Vectors_Difference__c</fullName>
    <label>Max Vectors Difference</label>
    <summarizedField>Sensor_Event__c.Modulus_difference_Vectors__c</summarizedField>
    <summaryForeignKey>Sensor_Event__c.Sensor__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>